--- a/diemthi/assets/style.css
+++ b/diemthi/assets/style.css
@@ -172,7 +172,9 @@ hr.soften {
 	border-radius:2px;
 }
 .carousel-control, .carousel-control:hover {
-	background:rgba(248, 118, 16, 1); 
+
+	background:#0A5BC4; 
+
 	height:43px; 
 	line-height:34px; 
 	color: #fff;
@@ -181,9 +183,9 @@ hr.soften {
 	top: 50%;
 }
 .homCar h4 {
-	background-color: #eb4800; 
+	background-color: #0A5BC4; 
 	color: #fff;
-	padding: 11px 4px;
+	padding: 11px 9px;
 	font-size: 26px;
 	text-transform: uppercase;
 	float: left;width: auto;
