--- a/diemthi/assets/css/css/style.css
+++ b/diemthi/assets/css/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	background: #448ed3 ;
+	background: #a3cbff ;
 	font-family: "Lato" ;
 }
 .wrap {
@@ -76,15 +76,15 @@ body {
 .wrap button {
 	width: 100%;
 	border-radius: 7px;
-	background: #b6ee65;
+	background: #4193ff;
 	text-decoration: center;
 	border: none;
-	color: #51771a;
+	color: #002f6d;
   	margin-top:-5px;
 	padding-top: 14px;
 	padding-bottom: 14px;
 	outline: none;
 	font-size: 13px;	
-	border-bottom: 3px solid #307d63;
+	border-bottom: 3px solid #20097c;
 	cursor: pointer;
 }
