--- a/diemthi/assets/css/css/style.css
+++ b/diemthi/assets/css/css/style.css
@@ -37,7 +37,7 @@ body {
 	border: none;
 	background: #fff;
   	font-family:Lato ;
-  	font-weight:700 ;
+  	/*font-weight:700;*/
 	display: block;
 	height: 40px;
 	outline: none;
